--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<phpunit bootstrap="vendor/autoload.php" colors="true">
+<phpunit
+        bootstrap="./vendor/autoload.php"
+        colors="true"
+        verbose="true"
+        stopOnFailure="false">
     <testsuites>
         <testsuite name="Lorem Tests">
             <directory>./tests/</directory>
